kubernetes/k8s-projects/microservices-on-k8s/k8s-minikube-2/voting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-service
  labels:
    app: voting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voting-service
  template:
    metadata:
      labels:
        app: voting-service
    spec:
      containers:
      - name: voting-service
        image: livingdevopswithakhilesh/microservices:voting-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /app/application.properties
          subPath: application.properties
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/origamis
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /api/origamis
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: config-volume
        configMap:
          name: voting-config
---
apiVersion: v1
kind: Service
metadata:
  name: voting
spec:
  selector:
    app: voting-service
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
